ci cd tests fix